Make it Space Invaders Themed

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
         <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js"></script>
+        <script type="text/javascript" src="https://rawgit.com/richtr/threeVR/master/js/DeviceOrientationController.js"></script>
         <script type="text/javascript" src="DeviceOrientationControls.js"></script>
         <script type="text/javascript" src="https://rawgit.com/mrdoob/three.js/master/examples/js/effects/StereoEffect.js"></script>
         <script type="text/javascript" src="https://rawgit.com/saucecode/threejs-demos/master/MTLLoader.js"></script>
         <script type="text/javascript" src="https://rawgit.com/saucecode/threejs-demos/master/OBJLoader.js"></script>
+        <script type="text/javascript" src="https://rawgit.com/jeromeetienne/threex.colliders/master/threex.collider.js"></script>
+        <script type="text/javascript" src="https://rawgit.com/jeromeetienne/threex.colliders/master/threex.colliderhelper.js"></script>
+        <script type="text/javascript" src="https://rawgit.com/jeromeetienne/threex.colliders/master/threex.collidersystem.js"></script>
         <script type="text/javascript" src="main.js"></script>
         <style>
             body {
